--- a/auth-api/pom.xml
+++ b/auth-api/pom.xml
@@ -52,7 +52,11 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
-		
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
